--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="padding_small">8.dp</dimen>
-    <dimen name="padding_medium">16.dp</dimen>
+    <dimen name="padding_medium">16dp</dimen>
 </resources>
